docs: progress indicator usage guide

--- a/docs/components/progress-indication/index.mdx
+++ b/docs/components/progress-indication/index.mdx
@@ -1,6 +1,6 @@
 ---
 doc-type: 'tabs'
-description: 'Progress indicators are used to visually convey the status or completion of a task or process to users. Use them to provide feedback for operations that take one second or more.'
+description: 'Progress indicators are show the status or completion of a  process. Use them to provide feedback for operations that take one second or more.'
 title: 'Progress indicator'
 deprecated:
 ---
