--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -19,8 +19,8 @@ Time pickers are primarily used within [time inputs](../input-time) but can also
 
 - **Value**: The selected time value.
 - **Format**: Choose whether you use hours, minutes, seconds and/or milliseconds as well as 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the UX Writing guides <font color="#ff0000">TODO ADD LINK</font>).
-	- **Columns**: Hide hours, minutes, seconds and milliseconds columns when not needed.
-	- **Intervals**: Define an interval for every column to restrict allowed values and provide a faster selection. For example 2 hours, 15 minutes, 30 seconds, 100 milliseconds.
+  - **Columns**: Hide hours, minutes, seconds and milliseconds columns when not needed.
+  - **Intervals**: Define an interval for every column to restrict allowed values and provide a faster selection. For example 2 hours, 15 minutes, 30 seconds, 100 milliseconds.
 - **Header**: Define a header text that conveys the context of the time selection. Hide it when there is already a related headline in your UI.
 - **Corners**: By default, the time picker shows rounded corners to be consistent with the [dropdown](../dropdown). Use straight, left or right corners to combine with other components.
 - **Standalone appearance**: Shows a flat design without a shadow. We typically use it for inline placement.
@@ -28,9 +28,9 @@ Time pickers are primarily used within [time inputs](../input-time) but can also
 ## Behavior in context
 
 - **Interaction**: Users can navigate through the time picker using the keyboard. The following keys are supported:
-    - **Tab**: Navigate between areas of the time picker (header, body, footer).
-    - **Arrow keys or scroll**: Move through time options.
-    - **Enter or click**: Select the highlighted time.
+  - **Tab**: Navigate between areas of the time picker (header, body, footer).
+  - **Arrow keys or scroll**: Move through time options.
+  - **Enter or click**: Select the highlighted time.
 
 ## States
 
@@ -48,5 +48,5 @@ An individual time item of a time picker has five states: Default, hover, active
 ## Related
 
 - [Time input](../input-time)
-- [Date picker](../datepicker)
+- [Date picker](../date-picker)
 - [Dropdown](../dropdown)
