incorporated feedback from PR

--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -4,7 +4,7 @@ doc-type: 'tab-item'
 
 # Time input - Usage
 
-Time inputs are typically used in forms, filters and scheduling tools to ensure consistent and accurate time entries. By standardizing time inputs, it helps maintain data integrity and improves the user experience in applications requiring precise time information.
+Time inputs are typically used in forms, filters and scheduling tools to ensure consistent and accurate time entries. Standardizing time inputs ensures data integrity and improves the user experience in applications requiring precise time information.
 
 ![Time input overview](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=5647-1381&t=kyt8IrqJu6av5Nfh-4)
 
@@ -36,12 +36,12 @@ Time inputs are typically used in forms, filters and scheduling tools to ensure 
 
 - **Interaction**:
   - Click or focus opens the time picker.
-  - Use mouse or keyboard arrows to navigate to the desired time.
+  - Scroll via mouse or touch, or keyboard arrows navigates to the desired time.
   - Confirm closes the time picker.
   - Escape key closes the time picker.
 - **Validation**:
   - Use feedback text for validation types valid, info, warning and invalid.
-  - Invalid feedback automatically provided if entered time is not parsable.
+  - Invalid feedback is automatically provided if the entered time is not parsable.
   - Refer to the [validation](../forms-validation) chapter for detailed guidelines.
 - **Overflow**: Input fields should be wide enough to display the full time without truncation.
 - **Alignment**: Time inputs are always aligned to the left.
@@ -56,10 +56,9 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 
 - Do use consistent time formats throughout the application to avoid confusion
 - Do use separate inputs for start and end times to simplify time ranges
-- Do provide clear instructions, such as “Enter the time in TT format”
+- Do provide clear instructions, such as “Enter the time in HH:mm:ss”
 - Do consider localization to adapt time formats to local conventions
 - Don't use ambiguous formats without giving clear context
-- Don't allow free text without validation or formatting guidance
 
 ## Related
 
