--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -8,7 +8,7 @@ Time pickers are primarily used within [time inputs](../input-time) but can also
 
 ![TODO Overview](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Pattern-Illustrations?node-id=2550-58743&t=LITgbzwcgm87dQXa-4)
 
-1. Time Picker container
+1. Time picker container
 2. Time value
 3. Header
 4. Time format
@@ -18,9 +18,9 @@ Time pickers are primarily used within [time inputs](../input-time) but can also
 ## Options
 
 - **Value**: The selected time value.
-- **Format**: Choose whether you use hours, minutes, seconds and/or milliseconds as well as 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the UX Writing guides <font color="#ff0000">TODO ADD LINK</font>).
+- **Format**: Choose which time units to display, depending on your needs (hours, minutes, seconds, milliseconds). Additionally, define a 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the UX Writing guides <font color="#ff0000">TODO ADD LINK</font>).
   - **Columns**: Hide hours, minutes, seconds and milliseconds columns when not needed.
-  - **Intervals**: Define an interval for every column to restrict allowed values and provide a faster selection. For example 2 hours, 15 minutes, 30 seconds, 100 milliseconds.
+  - **Intervals**: Define an interval for every unit to restrict allowed values and provide a faster selection. For example 2 hours, 15 minutes, 30 seconds, 100 milliseconds.
 - **Header**: Define a header text that conveys the context of the time selection. Hide it when there is already a related headline in your UI.
 - **Corners**: By default, the time picker shows rounded corners to be consistent with the [dropdown](../dropdown). Use straight, left or right corners to combine with other components.
 - **Standalone appearance**: Shows a flat design without a shadow. We typically use it for inline placement.
@@ -40,13 +40,14 @@ An individual time item of a time picker has five states: Default, hover, active
 
 ## Dos and Don’ts
 
-- Do use the time picker to ensure accurate time input.
-- Do provide clear instructions and labels for users.
-- Do ensure the time picker is accessible via keyboard.
-- Don’t clutter the time picker with unnecessary options.
+- Do use the time picker to ensure accurate time selection (we recommend to use [time inputs](../input-time) for that reason)
+- Do provide clear instructions and labels for users
+- Do ensure the time picker is accessible via keyboard
+- Don’t clutter the time picker with unnecessary options
 
 ## Related
 
 - [Time input](../input-time)
 - [Date picker](../date-picker)
+- [Date time picker](../date-time-picker)
 - [Dropdown](../dropdown)
