fix broken links

--- a/docs/components/forms-behavior/index.mdx
+++ b/docs/components/forms-behavior/index.mdx
@@ -57,5 +57,5 @@ For more information on form validation, refer to the [validation](../forms-vali
 
 ## Related
 
-- [Validation](../forms-validation)
-- [Layout](../forms-layout)
+- [Validation](../components/forms-validation)
+- [Layout](../components/forms-layout)
