--- a/docs/components/forms-behavior/index.mdx
+++ b/docs/components/forms-behavior/index.mdx
@@ -53,7 +53,7 @@ In this strategy, there is no need for a submit button. The form is automaticall
 - Con: Handling validation and error messages without a submit button can be challenging.
 - Con: Users may not have a chance to review and confirm their input before submission.
 
-For more information on form validation, refer to the [validation](../forms-validation) chapter.
+For more information on form validation, refer to the [validation](../components/forms-validation) chapter.
 
 ## Related
 
