--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -6,7 +6,7 @@ doc-type: 'tab-item'
 
 Time inputs are typically used in forms, filters and scheduling tools to ensure consistent and accurate time entries. Standardizing time inputs ensures data integrity and improves the user experience in applications requiring precise time information.
 
-![Time input overview](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=5647-1381&t=kyt8IrqJu6av5Nfh-4)
+![Time input overview](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=5647-1381&t=X5f645XuQl3ZV8XD-4)
 
 1. Label
 2. Required field indicator
@@ -24,11 +24,11 @@ Time inputs are typically used in forms, filters and scheduling tools to ensure 
 - **Show text as tooltip**: See [form field](../forms-field).
 - **Placeholder**: See [form field](../forms-field). We typically use a placeholder to show an example time format to assist users when the field is empty.
 - **Error message**: Feedback text when time is not parsable. We typically use this to inform users that the entered time format is incorrect and guide them to enter a valid time.
-- **Format**: Specify the time format to ensure that times are entered in a consistent and recognizable format. Default is ‘TT’ which is the localized 24-hour time with seconds  (read more in the <font color="#ff0000">TODO UX Writing guides</font>).
+- **Format**: Specify the time format to ensure that times are entered in a consistent and recognizable format. Default is ‘TT’ which is the localized 24-hour time with seconds  (read more in the [UX Writing guides](../../guidelines/language)).
 	- **Columns**: Show the respective columns in the time picker (see [time picker](../time-picker)).
 	- **Intervals**: Define intervals to restrict allowed values (see [time picker](../time-picker)).
 - **Time picker**:
-	- **Header**: See [time picker](../time-picker). We typically hide the header when there is a label on the input or if the context is conveyed in another way.
+	- **Header**: Hide the header when there is a label on the input or if the context is conveyed in another way (see [time picker](../time-picker)).
 	- **Corners**: See [time picker](../time-picker).
 	- **Standalone appearance**: See [time picker](../time-picker).
 
@@ -54,11 +54,17 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 
 ## Dos and Don’ts
 
-- Do use consistent time formats throughout the application to avoid confusion
-- Do use separate inputs for start and end times to simplify time ranges
-- Do provide clear instructions, such as “Enter the time in HH:mm:ss”
-- Do consider localization to adapt time formats to local conventions
-- Don't use ambiguous formats without giving clear context
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>Do use consistent time formats throughout the application to avoid confusion</DoAndDont.Item>
+    <DoAndDont.Item>Do use separate inputs for start and end times to simplify time ranges</DoAndDont.Item>
+    <DoAndDont.Item>Do ensure the time picker is accessible via keyboard</DoAndDont.Item>    
+    <DoAndDont.Item>Do consider localization to adapt time formats to local conventions</DoAndDont.Item>    
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>Don't use ambiguous formats without giving clear context</DoAndDont.Item>
+  </DoAndDont.Dont>
+</DoAndDont>
 
 ## Related
 
