Swap one do and dont - feedback final edit
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -57,12 +57,12 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 <DoAndDont>
   <DoAndDont.Do>
     <DoAndDont.Item>Do use consistent time formats throughout the application to avoid confusion</DoAndDont.Item>
-    <DoAndDont.Item>Do use separate inputs for start and end times to simplify time ranges</DoAndDont.Item>
+    <DoAndDont.Item>Do add helper text to clarify the time format being used </DoAndDont.Item>
     <DoAndDont.Item>Do ensure the time picker is accessible via keyboard</DoAndDont.Item>    
     <DoAndDont.Item>Do consider localization to adapt time formats to local conventions</DoAndDont.Item>    
   </DoAndDont.Do>
   <DoAndDont.Dont>
-    <DoAndDont.Item>Don't use ambiguous formats without giving clear context</DoAndDont.Item>
+    <DoAndDont.Item>Don't use the same input for start and end times, instead separate them</DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
 
