fix build errors

--- a/docs/components/time-picker/guide.mdx
+++ b/docs/components/time-picker/guide.mdx
@@ -2,6 +2,8 @@
 doc-type: 'tab-item'
 ---
 
+import DoAndDont from '@site/src/components/DoAndDont';
+
 # Time picker - Usage
 
 Time pickers are primarily used within [time inputs](../input-time) but can also be utilized standalone in applications where direct time selection is required.
@@ -11,13 +13,13 @@ Time pickers are primarily used within [time inputs](../input-time) but can also
 1. Time picker container
 2. Time unit (column) headers
 3. Selected time
-5. AM/PM select (12-hour format only)
-6. Confirm ![button](../button)
+4. AM/PM select (12-hour format only)
+5. Confirm [button](../button)
 
 ## Options
 
 - **Value**: The selected time value.
-- **Format**: Choose which time units to display, depending on your needs (hours, minutes, seconds, milliseconds). Additionally, define a 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the [UX Writing guides](../../guidelines/language)).
+- **Format**: Choose which time units to display, depending on your needs (hours, minutes, seconds, milliseconds). Additionally, define a 12- or 24-hour format. We recommend to use a 24-hour format for universal readability (read more in the [UX Writing guides](./../../guidelines/language/writing-style-guide-getting-started)).
   - **Columns**: Hide hours, minutes, seconds and milliseconds columns when not needed.
   - **Intervals**: Define an interval for every unit to restrict allowed values and provide a faster selection. For example 2 hours, 15 minutes, 30 seconds, 100 milliseconds.
 - **Header**: Define a header text that conveys the context of the time selection. Hide it when there is already a related headline in your UI.
@@ -41,12 +43,21 @@ An individual time item of a time picker has five states: Default, hover, active
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>Do use the time picker to ensure accurate time selection (we recommend to use [time inputs](../input-time) for that reason)</DoAndDont.Item>
-    <DoAndDont.Item>Do provide clear instructions and labels for users</DoAndDont.Item>
-    <DoAndDont.Item>Do ensure the time picker is accessible via keyboard</DoAndDont.Item>    
+    <DoAndDont.Item>
+      Do use the time picker to ensure accurate time selection (we recommend to
+      use [time inputs](../input-time) for that reason)
+    </DoAndDont.Item>
+    <DoAndDont.Item>
+      Do provide clear instructions and labels for users
+    </DoAndDont.Item>
+    <DoAndDont.Item>
+      Do ensure the time picker is accessible via keyboard
+    </DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
-    <DoAndDont.Item>Don’t clutter the time picker with unnecessary options</DoAndDont.Item>
+    <DoAndDont.Item>
+      Don’t clutter the time picker with unnecessary options
+    </DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
 
