--- a/docs/components/input-time/guide.mdx
+++ b/docs/components/input-time/guide.mdx
@@ -2,6 +2,8 @@
 doc-type: 'tab-item'
 ---
 
+import DoAndDont from '@site/src/components/DoAndDont';
+
 # Time input - Usage
 
 Time inputs are typically used in forms, filters and scheduling tools to ensure consistent and accurate time entries. Standardizing time inputs ensures data integrity and improves the user experience in applications requiring precise time information.
@@ -24,13 +26,13 @@ Time inputs are typically used in forms, filters and scheduling tools to ensure 
 - **Show text as tooltip**: See [form field](../forms-field).
 - **Placeholder**: See [form field](../forms-field). We typically use a placeholder to show an example time format to assist users when the field is empty.
 - **Error message**: Feedback text when time is not parsable. We typically use this to inform users that the entered time format is incorrect and guide them to enter a valid time.
-- **Format**: Specify the time format to ensure that times are entered in a consistent and recognizable format. Default is ‘TT’ which is the localized 24-hour time with seconds (read more in the [UX Writing guides](../../guidelines/language)).
-	- **Columns**: Show the respective columns in the time picker (see [time picker](../time-picker)).
-	- **Intervals**: Define intervals to restrict allowed values (see [time picker](../time-picker)).
+- **Format**: Specify the time format to ensure that times are entered in a consistent and recognizable format. Default is ‘TT’ which is the localized 24-hour time with seconds (read more in the [UX Writing guides](./../../guidelines/language/writing-style-guide-getting-started)).
+  - **Columns**: Show the respective columns in the time picker (see [time picker](../time-picker)).
+  - **Intervals**: Define intervals to restrict allowed values (see [time picker](../time-picker)).
 - **Time picker**:
-	- **Header**: Hide the header when there is a label on the input or if the context is conveyed in another way (see [time picker](../time-picker)).
-	- **Corners**: See [time picker](../time-picker).
-	- **Standalone appearance**: See [time picker](../time-picker).
+  - **Header**: Hide the header when there is a label on the input or if the context is conveyed in another way (see [time picker](../time-picker)).
+  - **Corners**: See [time picker](../time-picker).
+  - **Standalone appearance**: See [time picker](../time-picker).
 
 ## Behavior in context
 
@@ -56,13 +58,24 @@ Time input has five states: Default, hover, disabled, read-only and focused.
 
 <DoAndDont>
   <DoAndDont.Do>
-    <DoAndDont.Item>Do use consistent time formats throughout the application to avoid confusion</DoAndDont.Item>
-    <DoAndDont.Item>Do add helper text to clarify the time format being used </DoAndDont.Item>
-    <DoAndDont.Item>Do ensure the time picker is accessible via keyboard</DoAndDont.Item>    
-    <DoAndDont.Item>Do consider localization to adapt time formats to local conventions</DoAndDont.Item>    
+    <DoAndDont.Item>
+      Do use consistent time formats throughout the application to avoid
+      confusion
+    </DoAndDont.Item>
+    <DoAndDont.Item>
+      Do add helper text to clarify the time format being used{' '}
+    </DoAndDont.Item>
+    <DoAndDont.Item>
+      Do ensure the time picker is accessible via keyboard
+    </DoAndDont.Item>
+    <DoAndDont.Item>
+      Do consider localization to adapt time formats to local conventions
+    </DoAndDont.Item>
   </DoAndDont.Do>
   <DoAndDont.Dont>
-    <DoAndDont.Item>Don't use the same input for start and end times, instead separate them</DoAndDont.Item>
+    <DoAndDont.Item>
+      Don't use the same input for start and end times, instead separate them
+    </DoAndDont.Item>
   </DoAndDont.Dont>
 </DoAndDont>
 
