update docs images

--- a/docs/components/progress-indicator/index.mdx
+++ b/docs/components/progress-indicator/index.mdx
@@ -1,5 +1,5 @@
 ---
 doc-type: 'tabs'
-description: 'A progress indicator is a visual representation of the progress of a task or process, often used to inform users about the status of an ongoing operation.'
+description: 'Progress indicators are show the status or completion of a  process. Use them to provide feedback for operations that take one second or more.'
 title: 'Progress indicator'
 ---
