Apply suggestions from code review
Co-authored-by: tokyojen <143795032+tokyojen@users.noreply.github.com>

--- a/docs/components/progress-indicator/index.mdx
+++ b/docs/components/progress-indicator/index.mdx
@@ -1,5 +1,5 @@
 ---
 doc-type: 'tabs'
-description: 'Progress indicators are show the status or completion of a  process. Use them to provide feedback for operations that take one second or more.'
+description: 'Progress indicators show the status or completion of a process. Use them to provide feedback for operations that take one second or more.'
 title: 'Progress indicator'
 ---
