--- a/docs/guidelines/language/software-versions.mdx
+++ b/docs/guidelines/language/software-versions.mdx
@@ -7,6 +7,8 @@ no_single_tab: true
 description: 'Consistency in writing about versions builds trust and helps users easily track updates and improvements. A clear, predictable versioning system also reinforces the stability and reliability of your product.'
 ---
 
+import DoAndDont from '@site/src/components/DoAndDont';
+
 # Software version naming  
 
 Use semantic versioning to align with product and development teams and to communicate clearly to users.  
