added contents to markdowns

--- a/docs/guidelines/language/money.mdx
+++ b/docs/guidelines/language/money.mdx
@@ -1,3 +1,64 @@
 # Money and currencies
 
-Lorem ipsum
+## Money and currency 
+
+Understanding money and currency is important for designing user interfaces that facilitate financial transactions, licensing, display prices, and manage currency conversions. This requires attention to details like currency symbols, formatting standards, and localization to ensure precision and user-friendliness. 
+
+## General rules  
+
+Use the same formatting throughout your user interface.  
+
+DO: £320 DON’T: £320/£320.00/Three hundred and twenty pounds/320 pounds  
+
+Place the currency symbol before the amount within American English user interfaces.  
+
+DO: £320 DON’T: 320£ 
+
+Use decimal points for cents or smaller units within American English user interfaces. 
+
+DO: €999.50 DON’T: €999,50 
+DO: $400,456.50 DON’T: $400.456,50 
+
+Never add a space between the currency symbol and the amount. 
+
+DO: $100  
+DON’T: $ 100 
+
+Use the ISO currency code before the number without a space.  
+
+DO: USD400 
+DON’T: 300USD 
+
+Use numbers and currency symbols within the UI when talking about marketing and pricing.  
+
+DO: Thank you. Your payment of $50 has been processed. 
+DO: Invest in our new soft sensors for $6,000 to boost your production efficiency.
+DO: Spare parts cost estimation for 2025 is $125,999.
+DO: The subscription costs $10 per month. 
+
+Write out the full word in formal and legal documents. 
+
+DO: The total amount shall not exceed four thousand dollars.  
+
+## Understand when to use the currency symbol (¥) or the currency code (JPY). 
+
+**Currency symbol ($)**
+- User interface: dashboards, displays, etc.
+- Communications: emails, notifications, etc.
+- Pricing and shopping carts
+- In-app advertising
+- In-app purchases
+- Alerts and events
+
+**ISO currency code (USD)**
+- Legal contracts
+- Documentation: compliance, regulatory
+- Financial documents
+- Financial transactions
+- Bank statements
+- International invoices and billing
+
+## Related  
+
+- [Numbers and percentages ](numbers.mdx)
+- [ISO 4217 Currency codes](https://www.iso.org/iso-4217-currency-codes.html)
