--- a/docs/guidelines/language/numbers.mdx
+++ b/docs/guidelines/language/numbers.mdx
@@ -1,3 +1,118 @@
-# Numbers
+# Numbers and percentages  
 
-Lorem ipsum
+In industrial settings, numbers and percentages are key to tracking performance, spotting trends, and making informed decisions. Since there are many ways to write them, the following guidelines aim to keep usage simple and consistent across teams. 
+
+Write “Number” when there is enough space within the user interface.  
+
+DO: Number 
+DON’T: Num. 
+
+Use “No.” as an abbreviation for number with a period and without a space. 
+
+DO: No.6 
+DON’T: Num.6 
+
+Avoid using the # symbol with numbers.  
+
+DO: Number 6 
+DON’T: #6 
+
+Write numbers as digits, such as “9” instead of “nine”, in industrial UIs.   
+
+DO: We’ve released 3 new features this month. 
+DON’T: We’ve released three new features this month.  
+
+Write numbers with four digits and more with commas to separate thousands, millions, billions, etc. in American English.  
+
+DO: 100,000 DON’T: 100.000 
+
+## Numbers and punctuation  
+
+Use en dashes instead of hyphens for ranges. 
+
+DO: 10–0
+DO: The shipment weighs 50–75kg
+
+Write out the unit only once in ranges. 
+
+DO: The temperature fluctuated between 20–25°C
+DO: The temperature fluctuated between 20°C–25°C
+
+Use the minus hyphen for negative numbers which is better aligned than a normal hyphen (Unicode U+2212).  
+
+DO: -12
+DON’T: —12
+
+Use either “to” or separate text fields for ranges with minus numbers for readability.  
+
+DO: -12 to -15°C
+DO: Min temp: -12 / Max temp: -15°
+
+## Decimals
+
+Write decimals using a period (.) to separate the whole number from the fractional part in American English. 
+
+DO: 0.5 DON’T: 0,5  DO: 5,245.15 DON’T: 5.245,15  DO: 2.5 million DON’T: 2,5 million 
+
+## Thousands, millions and billions 
+
+Use “K” as an abbreviation for thousand, “M” for million, and “B” for billion without a period or space. 
+
+Consider variations in other languages and never use abbreviations when there is doubt.  
+
+DO: 34M DON’T: 34 mil 
+
+Use the singular “million” when talking about a specific number.  
+
+DO: 34 million DON’T: 34 millions 
+
+DO: Our system processes two million connections a minute.  DON’T: Our system processes one millions connections a minute. 
+
+Use the plural “millions” when talking about an unspecific number.  
+
+DO: Our goal is to deliver software to millions of happy users worldwide 
+
+Write out numbers in the millions and billions (“one million” instead of “1,000,000”) in longer texts and paragraphs. 
+
+DO: Manage maintenance for over one million assets within your zones. DON’T: Manage maintenance for over 1,000,000 assets within your zones. 
+
+Use numerals for numbers in the millions for dates, addresses, units of measurement, currency and percentages. 
+
+DO: The company headquarters is located at 1,000,000 Main Street. 
+DO: The temperature can reach 1,000,000°C in the pod. 
+DO: The cargo ship can carry up to 1,000,000kg. 
+DO: The generator’s top speed is 1,000,000km/h. DO: The success rate of our new implementation is 1,000,000%. 
+DO: The project budget is $1,000,000. 
+
+## Percentages 
+
+Use % instead of “percentage” within the user interface to save space. 
+
+DO: 10% DON’T: 10 percent 
+
+Use % after the number and without a space.  
+
+DO: 10% DON’T: %10 
+
+## Phone numbers 
+
+Separate phone numbers into groups for clarity. 
+
+DO: Country code, area code, numbers in groupings of 3 or 4 
+
+Use the plus symbol (+) or “00” before the country code. 
+
+DO: +49 123 456 7890 
+DO: 0049 123 456 7890 
+
+Show extension numbers with a hyphen.   
+
+DO: 0123 456 7890-12  DON’T: 0123 456 7890 12 
+
+## Related  
+
+- [Time and dates](time-date.mdx)
+- [Money and currencies](money.mdx)
+- [Charts](../../components/charts-overview/index.mdx)
+- [KPI](../../components/kpi/index.mdx)
+- [Key value](../../components/key-value/index.mdx)
