--- a/docs/guidelines/language/software-versions.mdx
+++ b/docs/guidelines/language/software-versions.mdx
@@ -11,9 +11,10 @@ import DoAndDont from '@site/src/components/DoAndDont';
 
 # Software version naming  
 
-Use semantic versioning to align with product and development teams and to communicate clearly to users.  
+## General rules
+Use semantic versioning to align with product and development teams and to communicate clearly to users.
 
-Write “version” in full without abbreviating when there is enough space within the user interface.  
+Write “version” in full without abbreviating when there is enough space within the user interface.
 
 <DoAndDont>
   <DoAndDont.Do>
