--- a/docs/guidelines/language/numbers.mdx
+++ b/docs/guidelines/language/numbers.mdx
@@ -1,58 +1,130 @@
+---
+sidebar_label: Numbers and percentages
+title: Numbers and percentages
+doc-type: banner
+component-tabs:
+  - ""
+no_single_tab: true
+description: In industrial settings, numbers and percentages are key to tracking performance, spotting trends, and making informed decisions. Since there are many ways to write them, the following guidelines aim to keep usage simple and consistent across teams.
+---
+
+import DoAndDont from '@site/src/components/DoAndDont';
+
 # Numbers and percentages  
 
-In industrial settings, numbers and percentages are key to tracking performance, spotting trends, and making informed decisions. Since there are many ways to write them, the following guidelines aim to keep usage simple and consistent across teams. 
+## General rules
 
 Write “Number” when there is enough space within the user interface.  
 
-DO: Number 
-DON’T: Num. 
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>Number</DoAndDont.Item>
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>Num.</DoAndDont.Item>
+  </DoAndDont.Dont>
+</DoAndDont>
 
-Use “No.” as an abbreviation for number with a period and without a space. 
+Use “No.” as an abbreviation for number with a period and without a space.
 
-DO: No.6 
-DON’T: Num.6 
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>No.6</DoAndDont.Item>
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>Num.6</DoAndDont.Item>
+  </DoAndDont.Dont>
+</DoAndDont>
 
 Avoid using the # symbol with numbers.  
 
-DO: Number 6 
-DON’T: #6 
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>Number 6</DoAndDont.Item>
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>#6</DoAndDont.Item>
+  </DoAndDont.Dont>
+</DoAndDont>
 
 Write numbers as digits, such as “9” instead of “nine”, in industrial UIs.   
 
-DO: We’ve released 3 new features this month. 
-DON’T: We’ve released three new features this month.  
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>We’ve released 3 new features this month.</DoAndDont.Item>
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>We’ve released three new features this month.</DoAndDont.Item>
+  </DoAndDont.Dont>
+</DoAndDont>
 
 Write numbers with four digits and more with commas to separate thousands, millions, billions, etc. in American English.  
 
-DO: 100,000 DON’T: 100.000 
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>100,000</DoAndDont.Item>
+  </DoAndDont.Do>
+  <DoAndDont.Dont>
+    <DoAndDont.Item>100.000</DoAndDont.Item>
+  </DoAndDont.Dont>
+</DoAndDont>
 
 ## Numbers and punctuation  
 
 Use en dashes instead of hyphens for ranges. 
 
-DO: 10–0
-DO: The shipment weighs 50–75kg
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>10–0</DoAndDont.Item>
+     <DoAndDont.Item>The shipment weighs 50–75kg</DoAndDont.Item>
+  </DoAndDont.Do>
+</DoAndDont>
 
 Write out the unit only once in ranges. 
 
-DO: The temperature fluctuated between 20–25°C
-DO: The temperature fluctuated between 20°C–25°C
+<DoAndDont>
+  <DoAndDont.Do>
+    <DoAndDont.Item>The temperature fluctuated between 20–25°C</DoAndDont.Item>
+     <DoAndDont.Item>The temperature fluctuated between 20°C–25°C</DoAndDont.Item>
+  </DoAndDont.Do>
+</DoAndDont>
 
 Use the minus hyphen for negative numbers which is better aligned than a normal hyphen (Unicode U+2212).  
 
-DO: -12
-DON’T: —12
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>-12</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>—12</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 Use either “to” or separate text fields for ranges with minus numbers for readability.  
 
-DO: -12 to -15°C
-DO: Min temp: -12 / Max temp: -15°
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>-12 to -15°C</DoAndDont.Item>
+		<DoAndDont.Item>Min temp: -12 / Max temp: -15°</DoAndDont.Item>
+	</DoAndDont.Do>
+</DoAndDont>
 
 ## Decimals
 
 Write decimals using a period (.) to separate the whole number from the fractional part in American English. 
 
-DO: 0.5 DON’T: 0,5  DO: 5,245.15 DON’T: 5.245,15  DO: 2.5 million DON’T: 2,5 million 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>0.5</DoAndDont.Item>
+		<DoAndDont.Item>5,245.15</DoAndDont.Item>
+		<DoAndDont.Item>2.5 million</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>0,5</DoAndDont.Item>
+		<DoAndDont.Item>5.245,15</DoAndDont.Item>
+		<DoAndDont.Item>2,5 million</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 ## Thousands, millions and billions 
 
@@ -60,54 +132,109 @@ Use “K” as an abbreviation for thousand, “M” for million, and “B” fo
 
 Consider variations in other languages and never use abbreviations when there is doubt.  
 
-DO: 34M DON’T: 34 mil 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>34K</DoAndDont.Item>
+		<DoAndDont.Item>34M</DoAndDont.Item>
+		<DoAndDont.Item>34B</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>34 k</DoAndDont.Item>
+		<DoAndDont.Item>34 mil</DoAndDont.Item>
+		<DoAndDont.Item>34 bill</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 Use the singular “million” when talking about a specific number.  
 
-DO: 34 million DON’T: 34 millions 
-
-DO: Our system processes two million connections a minute.  DON’T: Our system processes one millions connections a minute. 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>34 million</DoAndDont.Item>
+		<DoAndDont.Item>Our system processes one million connections a minute.</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>34 millions</DoAndDont.Item>
+		<DoAndDont.Item>Our system processes one millions connections a minute.</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 Use the plural “millions” when talking about an unspecific number.  
 
-DO: Our goal is to deliver software to millions of happy users worldwide 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>Our goal is to deliver software to millions of happy users worldwide</DoAndDont.Item>
+	</DoAndDont.Do>
+</DoAndDont>
 
 Write out numbers in the millions and billions (“one million” instead of “1,000,000”) in longer texts and paragraphs. 
 
-DO: Manage maintenance for over one million assets within your zones. DON’T: Manage maintenance for over 1,000,000 assets within your zones. 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>We have over one million users worldwide.</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>We have over 1,000,000 users worldwide.</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 Use numerals for numbers in the millions for dates, addresses, units of measurement, currency and percentages. 
 
-DO: The company headquarters is located at 1,000,000 Main Street. 
-DO: The temperature can reach 1,000,000°C in the pod. 
-DO: The cargo ship can carry up to 1,000,000kg. 
-DO: The generator’s top speed is 1,000,000km/h. DO: The success rate of our new implementation is 1,000,000%. 
-DO: The project budget is $1,000,000. 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>The company headquarters is located at 1,000,000 Main Street.</DoAndDont.Item>
+		<DoAndDont.Item>The temperature can reach 1,000,000°C in the pod.</DoAndDont.Item>
+		<DoAndDont.Item>The cargo ship can carry up to 1,000,000kg.</DoAndDont.Item>
+		<DoAndDont.Item>The generator’s top speed is 1,000,000km/h.</DoAndDont.Item>
+		<DoAndDont.Item>The success rate of our new implementation is 1,000,000%.</DoAndDont.Item>
+		<DoAndDont.Item>The project budget is $1,000,000. </DoAndDont.Item>
+	</DoAndDont.Do>
+</DoAndDont>
 
 ## Percentages 
 
 Use % instead of “percentage” within the user interface to save space. 
 
-DO: 10% DON’T: 10 percent 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>10%</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>10 percent</DoAndDont.Item>
+	</DoAndDont.Dont>
 
 Use % after the number and without a space.  
 
-DO: 10% DON’T: %10 
+<<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>10%</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>%10</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 ## Phone numbers 
 
 Separate phone numbers into groups for clarity. 
 
-DO: Country code, area code, numbers in groupings of 3 or 4 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>Country code, area code, numbers in groupings of 3 or 4</DoAndDont.Item>
+	</DoAndDont.Do>
+</DoAndDont>
 
-Use the plus symbol (+) or “00” before the country code. 
+Use the plus symbol (+) or “00” before the country code. Show extension numbers with a hyphen.
 
-DO: +49 123 456 7890 
-DO: 0049 123 456 7890 
-
-Show extension numbers with a hyphen.   
-
-DO: 0123 456 7890-12  DON’T: 0123 456 7890 12 
+<DoAndDont>
+	<DoAndDont.Do>
+		<DoAndDont.Item>+49 123 456 7890</DoAndDont.Item>
+		<DoAndDont.Item>0049 123 456 7890</DoAndDont.Item>
+		<DoAndDont.Item>0123 456 7890-12</DoAndDont.Item>
+	</DoAndDont.Do>
+	<DoAndDont.Dont>
+		<DoAndDont.Item>0123 456 7890 12</DoAndDont.Item>
+	</DoAndDont.Dont>
+</DoAndDont>
 
 ## Related  
 
