--- a/docs/guidelines/language/time-date.mdx
+++ b/docs/guidelines/language/time-date.mdx
@@ -183,4 +183,4 @@ Use “th” and “nd” to reference centuries with ordinals without using sup
 
 - [Date input](../../components/input-date/index.mdx)
 - [Date picker](../../components/date-picker/index.mdx)
-- [Time input](../../components/input-time/index.mdx)
+- Time input
