--- a/docs/guidelines/language/numbers.mdx
+++ b/docs/guidelines/language/numbers.mdx
@@ -204,7 +204,7 @@ Use % instead of “percentage” within the user interface to save space. 
 
 Use % after the number and without a space.  
 
-<<DoAndDont>
+<DoAndDont>
 	<DoAndDont.Do>
 		<DoAndDont.Item>10%</DoAndDont.Item>
 	</DoAndDont.Do>
