fixed closing tag

--- a/docs/guidelines/language/numbers.mdx
+++ b/docs/guidelines/language/numbers.mdx
@@ -201,6 +201,7 @@ Use % instead of “percentage” within the user interface to save space. 
 	<DoAndDont.Dont>
 		<DoAndDont.Item>10 percent</DoAndDont.Item>
 	</DoAndDont.Dont>
+</DoAndDont>
 
 Use % after the number and without a space.  
 
