provide alternative preview name

--- a/docs/components/modal/code.mdx
+++ b/docs/components/modal/code.mdx
@@ -45,7 +45,8 @@ Select the appropriate section below for the respective usage information.
 ### By template
 
 <Playground
-  name="modal"
+  name="modal-by-template"
+  alternativePreviewName="modal"
   source={{
     angular: {
       'modal-by-template.ts': modal_by_template_ts_angular,
@@ -63,18 +64,18 @@ Select the appropriate section below for the respective usage information.
 ### By instance
 
 <Playground
-  name="modal"
+  name="modal-by-instance"
+  alternativePreviewName="modal"
   source={{
     angular: {
-      '"modal-by-instance.ts"': modal_by_instance_ts_angular,
-      '"modal-by-instance-content.ts"': modal_by_instance_content_ts_angular,
+      'modal-by-instance.ts': modal_by_instance_ts_angular,
+      'modal-by-instance-content.ts': modal_by_instance_content_ts_angular,
     },
   }}
   files={{
     angular: {
-      '"modal-by-instance.ts"': 'angular/"modal-by-instance.ts"',
-      '"modal-by-instance-content.ts"':
-        'angular/"modal-by-instance-content.ts"',
+      'modal-by-instance.ts': 'angular/modal-by-instance.ts',
+      'modal-by-instance-content.ts': 'angular/modal-by-instance-content.ts',
     },
   }}
   height={props.height}
